--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,9 @@
   padding: 2rem;
 
   font-weight: normal;
+
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4em;
 }
 
 a,
